Removed Hibernate.initialize) and added page for exact movie